@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto
skinparam classAttributeIconSize 0
'left to right direction

class ToDoListUI {
}


class ToDoListController {
    - GreenSpaceRepository greenSpaceRepository
    - ToDoListRepository toDoListRepository
    + ToDoListController()
    - getGreenSpaceRepository()
    - getToDoListRepository()
    + registerToDoEntry()
    - searchForGreenSpaceID(int greenSpaceID)
    + getGreenSpacesByResponsible()
    + getGreenSpaceDTOByResponsible()
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getGreenSpaceRepository()
    + getToDoListRepository()
    + getAuthenticationRepository()
}

class AuthenticationRepository {
    + getCurrentUserSession()
}

class UserSession {
    + getUserId()
}


class ToDoListRepository {
    -List<ToDoEntry> toDoList
    + registerToDoEntry(GreenSpace greenSpace, String title, String description, int urgency, int expectedDuration)
    - addToDoEntry(ToDoEntry toDoEntry)
    - validate(ToDoEntry toDoEntry)

}


class GreenSpaceRepository {
    - List<GreenSpace> greenSpacesList;
    + registerGreenSpace(String name, int size, float area, String address, String responsible)
    - addGreenSpace(GreenSpace greenSpace)
    - validate(GreenSpace greenSpace)
}

class ToDoListMapper {
 +ToDoListMapper()
 + toDto(List<GreenSpace> GreenSpaces)
 - toDto(GreenSpace greenSpace)
}

class GreenSpaceDTO{
    - GreenSpace objDto
    + GreenSpaceDTO(GreenSpace greenSpace)
    + getObjDto()
}


class ToDoEntry {
     -GreenSpace greenSpace
     -String title;
     -String description;
     -int urgency;
     -int expectedDuration;
     -String status;
     -String responsible;
     + ToDoEntry(GreenSpace greenSpace, String title, String description, int urgency, int expectedDuration)
     - validateToDo(title, description, urgency, expectedDuration)
}

class GreenSpace {
    -  String name
    -  String address
    -  String responsible
    -  Size size
    -  float area
}




ToDoListUI .> ToDoListController
'
ToDoListController ..> ToDoListMapper : sendGreenSpaceList()
ToDoListController <... ToDoListMapper : sendGreenSpaceListDTO()
ToDoListMapper ..> GreenSpaceDTO
Repositories --> ToDoListRepository: contains
ToDoListController ..> GreenSpaceRepository : getGreenSpaceList()
GreenSpaceRepository -> "*" GreenSpace : contains
ToDoListRepository "1" --> "*" ToDoEntry : contains
Repositories "1" --> "1" AuthenticationRepository : contains
AuthenticationRepository -> UserSession : contains
ToDoListController .> Repositories : repositories
Repositories -> Repositories : instance
ToDoEntryDTO ..> ToDoListMapper : returns Dto Obj


@enduml
